--- a/Blog.html
+++ b/Blog.html
@@ -34,22 +34,10 @@ NAVBAR
                         <a class="nav-link" href="./Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Tech</a>
+                        <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Compared</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Health</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Collections</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
@@ -57,7 +45,7 @@ NAVBAR
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
+                        <a class="nav-link" href="./Blog.html">Read Blogs</a>
                     </li>
                 </ul>
             </div>
