--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 NAVBAR
 --------------------------------------->
 
-    <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+   <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
             <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,22 +34,10 @@ NAVBAR
                         <a class="nav-link" href="./Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Tech</a>
+                        <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Compared</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Health</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Collections</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
@@ -57,7 +45,7 @@ NAVBAR
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
+                        <a class="nav-link" href="./Blog.html">Read Blogs</a>
                     </li>
                 </ul>
             </div>
