--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 <body>
 <!-- NAVBAR -->
 
-    <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+   <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
             <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,18 +37,6 @@
                         <a class="nav-link" href="./Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Tech</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Compared</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Health</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Collections</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
@@ -60,7 +48,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
+                        <a class="nav-link" href="./Blog.html">Read Blogs</a>
                     </li>
                 </ul>
             </div>
