--- a/blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html
+++ b/blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+   <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
             <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,36 +32,24 @@
             <div class="navbar-collapse collapse" id="navbarColor02">
                 <ul class="navbar-nav mr-auto d-flex align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Blog.html">Blog</a>
+                        <a class="nav-link" href="./Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Tech</a>
+                        <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Compared</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Health</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Collections</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../about.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../contact.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../privacyPolicy.html">Privacy Policy</a>
+                        <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="../Blog.html">Read Blogs</a>
+                        <a class="nav-link" href="./Blog.html">Read Blogs</a>
                     </li>
                 </ul>
             </div>
