--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
                    
-                <div style="background-image: url(./assets/img/iphone 15 pro max.jpg); height: 100%; min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
+<img url(./assets/img/iphone 15 pro max.jpg); height: 100%; min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image">
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
                             <a class="text-dark" href="./blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices">Iphone 15 Pro MAX Full Review & Prices</a>
@@ -97,7 +97,7 @@
                     <div class="mb-3 d-flex align-items-center">
                                             <img href="./blogs/Best Gaming Laptop 2024.html" height="80" src="../assets/img/top%20review%20best%20gaming%20laptop%20image.jpg" alt="2024 best gaming laptop image">
                         <div class="pl-3">
-                            <h2 href="./blogs/Best Gaming Laptop 2024.html" class="mb-2 h6 font-weight-bold">
+                            <a href="./blogs/Best Gaming Laptop 2024.html" class="text-dark">Best Gaming Laptop 2024</a>
                                 <span class="text-dark">Best Gaming Laptop 2024</span>
                             </h2>
                             <div class="card-text text-muted small">David Jones</div>
