--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -18,6 +18,8 @@
 
     <!-- Main CSS -->
     <link href="./assets/css/main.css" rel="stylesheet"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3355297884222438"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- NAVBAR -->
